engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__if_then_only_header.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
__error:
  error: "error: Error validating: Expr function name must be unique\n  -->  src/control_flow/headers/if_then_only_header.baml:33\n   | \n32 | //# Case 3\n33 | function IfThenOnlyHeader2() -> int {\n   | \n\nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/if_then_only_header.baml:2\n   | \n 1 | //# Case 1\n 2 | function IfThenOnlyHeader() -> int {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/if_then_only_header.baml:15\n   | \n14 | //# Case 2\n15 | function IfThenOnlyHeader2() -> int {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/if_then_only_header.baml:33\n   | \n32 | //# Case 3\n33 | function IfThenOnlyHeader2() -> int {\n   | \n\n"
