engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__multiple_levels.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
"expr::MultipleHeaderLevels":
  nodes:
    "MultipleHeaderLevels|c:func:0":
      label: MultipleHeaderLevels
      node_type: function
      parent: ~
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 0
        end: 262
    "MultipleHeaderLevels|c:func:0|h:section-one:0":
      label: Section One
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "MultipleHeaderLevels|c:func:0|h:section-three:0":
      label: Section Three
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "MultipleHeaderLevels|c:func:0|h:section-two:0":
      label: Section Two
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "MultipleHeaderLevels|c:func:0|h:subsection-2-1:0":
      label: Subsection 2.1
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "MultipleHeaderLevels|c:func:0|h:subsubsection-2-1-1:0":
      label: Subsubsection 2.1.1
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "MultipleHeaderLevels|c:func:0|s:0":
      label: stmt
      node_type: stmt
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 68
        end: 83
    "MultipleHeaderLevels|c:func:0|s:1":
      label: stmt
      node_type: stmt
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 108
        end: 123
    "MultipleHeaderLevels|c:func:0|s:2":
      label: stmt
      node_type: stmt
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 152
        end: 169
    "MultipleHeaderLevels|c:func:0|s:3":
      label: stmt
      node_type: stmt
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 204
        end: 220
    "MultipleHeaderLevels|c:func:0|s:5":
      label: expr
      node_type: expr
      parent: "MultipleHeaderLevels|c:func:0"
      span:
        file: src/control_flow/headers/multiple_levels.baml
        start: 247
        end: 260
  edges:
    "MultipleHeaderLevels|c:func:0":
      - dst: "MultipleHeaderLevels|c:func:0|h:section-one:0"
        label: ""
    "MultipleHeaderLevels|c:func:0|h:section-one:0":
      - dst: "MultipleHeaderLevels|c:func:0|s:0"
        label: ""
    "MultipleHeaderLevels|c:func:0|h:section-three:0":
      - dst: "MultipleHeaderLevels|c:func:0|s:5"
        label: ""
    "MultipleHeaderLevels|c:func:0|h:section-two:0":
      - dst: "MultipleHeaderLevels|c:func:0|s:1"
        label: ""
    "MultipleHeaderLevels|c:func:0|h:subsection-2-1:0":
      - dst: "MultipleHeaderLevels|c:func:0|s:2"
        label: ""
    "MultipleHeaderLevels|c:func:0|h:subsubsection-2-1-1:0":
      - dst: "MultipleHeaderLevels|c:func:0|s:3"
        label: ""
    "MultipleHeaderLevels|c:func:0|s:0":
      - dst: "MultipleHeaderLevels|c:func:0|h:section-two:0"
        label: ""
    "MultipleHeaderLevels|c:func:0|s:1":
      - dst: "MultipleHeaderLevels|c:func:0|h:subsection-2-1:0"
        label: ""
    "MultipleHeaderLevels|c:func:0|s:2":
      - dst: "MultipleHeaderLevels|c:func:0|h:subsubsection-2-1-1:0"
        label: ""
    "MultipleHeaderLevels|c:func:0|s:3":
      - dst: "MultipleHeaderLevels|c:func:0|h:section-three:0"
        label: ""
