engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__simple.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
"expr::SimpleTest":
  nodes:
    "SimpleTest|c:func:0":
      label: SimpleTest
      node_type: function
      parent: ~
      span:
        file: src/control_flow/headers/simple.baml
        start: 0
        end: 82
    "SimpleTest|c:func:0|h:main-header:0":
      label: Main Header
      node_type: expr
      parent: "SimpleTest|c:func:0"
      span:
        file: fake-file.baml
        start: 0
        end: 0
    "SimpleTest|c:func:0|s:0":
      label: stmt
      node_type: stmt
      parent: "SimpleTest|c:func:0"
      span:
        file: src/control_flow/headers/simple.baml
        start: 58
        end: 75
    "SimpleTest|c:func:0|s:1":
      label: expr
      node_type: expr
      parent: "SimpleTest|c:func:0"
      span:
        file: src/control_flow/headers/simple.baml
        start: 79
        end: 80
  edges:
    "SimpleTest|c:func:0":
      - dst: "SimpleTest|c:func:0|h:main-header:0"
        label: ""
    "SimpleTest|c:func:0|h:main-header:0":
      - dst: "SimpleTest|c:func:0|s:0"
        label: ""
    "SimpleTest|c:func:0|s:0":
      - dst: "SimpleTest|c:func:0|s:1"
        label: ""
